edit profile added

--- a/feedly/users/templates/home.html
+++ b/feedly/users/templates/home.html
@@ -7,5 +7,8 @@
 <body>
 <h1>welcome to feedly</h1>
 <h3>feeds,feeds,feeds</h3>
+<p>
+    <a href="{% url 'signup' %}"> Sign Up</a>
+</p>
 </body>
 </html>
