--- a/feedly/users/templates/home.html
+++ b/feedly/users/templates/home.html
@@ -9,6 +9,7 @@
 <h3>feeds,feeds,feeds</h3>
 <p>
     <a href="{% url 'signup' %}"> Sign Up</a>
+    <a href="{% url 'login' %}"> Log In</a>
 </p>
 </body>
 </html>
