logout completed successfully

--- a/feedly/users/templates/home.html
+++ b/feedly/users/templates/home.html
@@ -8,8 +8,13 @@
 <h1>welcome to feedly</h1>
 <h3>feeds,feeds,feeds</h3>
 <p>
+    <br>
+    <a href="{% url 'profile' %}">Profile</a>
+    <br>
     <a href="{% url 'signup' %}"> Sign Up</a>
+    <br>
     <a href="{% url 'login' %}"> Log In</a>
+
 </p>
 </body>
 </html>
