--- a/feedly/users/templates/profile.html
+++ b/feedly/users/templates/profile.html
@@ -21,7 +21,7 @@
     <p><a href="{% url 'logout' %}" style="margin-left:80vw"> log out</a>
    </p>
     <p>
-    <a href="{% url 'profile' %}" style="margin-left:80vw">Edit profile</a>
+    <a href="{% url 'edit_profile' %}" style="margin-left:80vw">Edit profile</a>
     </p>
 <br>
 <label>First name :{{ profile.myprofile.first_name }}
@@ -31,6 +31,10 @@
     <br>
 <label>Last name: {{ profile.myprofile.last_name }}</label>
 <br>
+    <br>
+    <br>
+    <label>Gender: {{ profile.myprofile.gender }}</label>
+    <br>
     <br>
     <br>
 <label>Username :{{ profile.username }}</label>
