--- a/feedly/users/templates/profile.html
+++ b/feedly/users/templates/profile.html
@@ -15,7 +15,7 @@
 
 <img style="width: 15vw; height: 25vh;"
                      alt="Image description"
-                     src="{% static 'users/profile.png' %}"/>
+                     src="{{ user.myprofile.avatar.url }}"/>
 <br>
 <br>
     <p><a href="{% url 'logout' %}" style="margin-left:80vw"> log out</a>
@@ -24,32 +24,32 @@
     <a href="{% url 'edit_profile' %}" style="margin-left:80vw">Edit profile</a>
     </p>
 <br>
-<label>First name :{{ profile.myprofile.first_name }}
+<label>First name :{{ user.myprofile.first_name }}
 </label>
 <br>
     <br>
     <br>
-<label>Last name: {{ profile.myprofile.last_name }}</label>
+<label>Last name: {{ user.myprofile.last_name }}</label>
 <br>
     <br>
     <br>
-    <label>Gender: {{ profile.myprofile.gender }}</label>
+    <label>Gender: {{ user.myprofile.gender }}</label>
     <br>
     <br>
     <br>
-<label>Username :{{ profile.username }}</label>
+<label>Username :{{ user.username }}</label>
 <br>
     <br>
     <br>
-<label>Email : {{ profile.email }}</label>
+<label>Email : {{ user.email }}</label>
 <br>
     <br>
     <br>
-<label>Contact no.: {{ profile.myprofile.phone_number }}</label>
+<label>Contact no.: {{ user.myprofile.phone_number }}</label>
 <br>
     <br>
     <br>
-<label>Date of birth : {{ profile.myprofile.date_of_birth|date:"M d, Y" }}</label>
+<label>Date of birth : {{ user.myprofile.date_of_birth|date:"M d, Y" }}</label>
 <br>
 </div>
 {% endblock %}
