--- a/feedly/users/templates/profile.html
+++ b/feedly/users/templates/profile.html
@@ -14,7 +14,7 @@
 
 
 <img style="width: 15vw; height: 25vh;"
-                     alt="Image description"
+                     alt="avatar"
                      src="{{ user.myprofile.avatar.url }}"/>
 <br>
 <br>
