--- a/feedly/users/templates/home.html
+++ b/feedly/users/templates/home.html
@@ -5,6 +5,9 @@
     <title>Feedly</title>
 </head>
 <body>
+{% for error in messages %}
+<p style="color: green">{{ error }}</p>
+{% endfor %}
 <h1>welcome to feedly</h1>
 <h3>feeds,feeds,feeds</h3>
 <p>
