--- a/feedly/users/templates/home.html
+++ b/feedly/users/templates/home.html
@@ -9,18 +9,37 @@
 <p style="color: green">{{ error }}</p>
 {% endfor %}
 <h1>welcome to feedly</h1>
-<h3>feeds,feeds,feeds</h3>
-<p>
-    <br>
+
     <a href="{% url 'profile' %}">Profile</a>
     <br>
+    {% if request.user.is_authenticated %}
+    <a href="#">Create Post</a>
+    {% else %}
     <a href="{% url 'signup' %}"> Sign Up</a>
+{% endif %}
     <br>
     {% if request.user.is_authenticated %}
     <a href="{% url 'logout' %}"> log out</a>
     {% else %}
     <a href="{% url 'login' %}"> Log In</a>
     {% endif %}
-</p>
+<br>
+<br>
+<div style="margin-left:25vw;margin-right:28vw">
+
+{% for post in object_list %}
+
+    <div style ="border:1px solid gray;padding:2vw">
+    <b><a href="{{ post.post_by.username }}">{{ post.post_by.username }}</a></b>
+    <p>{{ post.title }} </p><i>{{   post.post_on }}</i>
+    <br>
+    <img style="width: 40vw; height: 45vh;"
+     src="{{ post.image_post.url }}" alt="imagpost">
+    <br>
+    </div>
+    <br>
+
+{% endfor %}
+</div>
 </body>
 </html>
