--- a/feedly/users/templates/home.html
+++ b/feedly/users/templates/home.html
@@ -9,8 +9,9 @@
 <p style="color: green">{{ error }}</p>
 {% endfor %}
 <h1>welcome to feedly</h1>
-
-    <a href="{% url 'profile' %}">Profile</a>
+{% if request.user.is_authenticated %}
+    <a href="{% url 'profile' user.id %}">Profile</a>
+{% endif %}
     <br>
     {% if request.user.is_authenticated %}
     <a href="#">Create Post</a>
@@ -30,12 +31,13 @@
 {% for post in object_list %}
 
     <div style ="border:1px solid gray;padding:2vw">
-    <b><a href="{{ post.post_by.username }}">{{ post.post_by.username }}</a></b>
-    <p>{{ post.title }} </p><i>{{   post.post_on }}</i>
-    <br>
-    <img style="width: 40vw; height: 45vh;"
-     src="{{ post.image_post.url }}" alt="imagpost">
-    <br>
+        <img src="{{ post.post_by.myprofile.avatar.url }}" style="width:3vw;height:3vw;" alt="pic">
+        <b><a href="{% url 'profile' post.post_by.id %}">{{ post.post_by.username }}</a></b>
+        <p>{{ post.title }} </p><i>{{   post.post_on }}</i>
+        <br>
+        <img style="width: 40vw; height: 45vh;"
+          src="{{ post.image_post.url }}" alt="imagpost">
+        <br>
     </div>
     <br>
 
