--- a/feedly/users/templates/profile.html
+++ b/feedly/users/templates/profile.html
@@ -21,7 +21,9 @@
     <p><a href="{% url 'logout' %}" style="margin-left:80vw"> log out</a>
    </p>
     <p>
+        {% if request.user.is_authenticated %}
     <a href="{% url 'edit_profile' user.id %}" style="margin-left:80vw">Edit profile</a>
+        {% endif %}
     </p>
 <br>
 <label>First name :{{ user.myprofile.first_name }}
