--- a/feedly/users/templates/profile.html
+++ b/feedly/users/templates/profile.html
@@ -25,6 +25,11 @@
     <a href="{% url 'edit_profile' user.id %}" style="margin-left:80vw">Edit profile</a>
         {% endif %}
     </p>
+    <p>
+        {% if request.user.is_authenticated  %}
+        <a href="{% url 'account_del' user.id %}" style="margin-left:80vw">delete account</a>
+        {% endif %}
+    </p>
 <br>
 <label>First name :{{ user.myprofile.first_name }}
 </label>
